# RobotUpperControl

./: README.md
robot_upper_control/: CMakeLists.txt  CMakeLists_tutorials.txt  package.xml
robot_upper_control/include/robot_upper_control/: mainwindow.h  mapselectdialog.h  qnode.h  render_panel.hpp  route_goal_panel.hpp
robot_upper_control/launch/: remote_obstacle_adder.launch
robot_upper_control/src/: main.cpp  mainwindow.cpp  mapselectdialog.cpp  qnode.cpp
robot_upper_control/ui/: mainwindow.ui  mapselectdialog.ui
robot_upper_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
robot_upper_plugins/script/: client.py
robot_upper_plugins/src/: obstacle_add_tool.cpp  obstacle_add_tool.h  obstacle_del_tool.cpp  obstacle_del_tool.h  route_goal_tool.cpp  route_goal_tool.h
robot_upper_plugins/srv/: MapAddObstacle.srv  MapCrop.srv  MapEditObstacle.srv
