<package>
  <name>robot_upper_plugins</name>
  <version>0.1.0</version>
  <description>
     机器人可用的rviz插件
  </description>
  <maintainer email="du.ziiip@qq.com">DZP</maintainer>
  <license>TODO</license>

  <url>http://xxx.com</url>
  <author>DZP</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
